--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3006 && react-scripts start",
     "build-server-and-del": "npm run build-ts && del tsconfig.json",
     "server-build": "babel server --out-dir build-server",
     "server-start": "nodemon --watch server --exec babel-node server/app.js",
@@ -101,6 +101,7 @@
     "mongoose-paginate-v2": "^1.3.6",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.11",
+    "nodemon": "^2.0.15",
     "number-to-words": "^1.2.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
