--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   },
   "dependencies": {
     "@carbon/icons-react": "^10.11.0",
+    "@carbon/react": "^1.0.1",
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
     "@types/express-fileupload": "^1.1.2",
@@ -118,6 +119,7 @@
     "react-scripts": "^3.3.1",
     "react-select": "^3.1.0",
     "react-table": "^7.5.2",
+    "react-tippy": "^1.4.0",
     "react-to-print": "^2.6.3",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
